syntax= "proto3";

option java_multiple_files = false;
option java_package="kr.ac.dankook";
option java_outer_classname="MemberEvent";

service MemberEventService {
  rpc getMemberInfo (MemberEventRequest) returns (MemberEventResponse);
}

message MemberEventRequest {
  string id = 1;
}

message MemberEventResponse {
  string id = 1;
  string userId = 2;
  string email = 3;
  string name = 4;
  string role = 5;
}